# devlife-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.json
.github/workflows/: ci.yml
src/api/: main.py
src/common/: config.py  database.py  logger.py
src/dashboard/: app.py
src/dashboard/modules/: jobs.py
src/dashboard/pages/: jobs.py
src/jobs/flows/: daily_pipeline.py  prefect_flow.py
src/jobs/matching/: extractor.py  llm_analyzer.py
src/jobs/scrapers/: france_travail.py  job_collector.py
src/sport/parsers/: samsung_health.py
tests/unit/: test_samsung_parser.py
