[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlife-hub"
version = "0.1.0"
description = "Personal job search, sport & coaching dashboard with ML pipeline"
authors = [{ name = "Ton Nom", email = "tonemail@exemple.com" }]
requires-python = ">=3.11"

dependencies = [
    # API & web
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    # Dashboard
    "streamlit>=1.36",
    "plotly>=5.22",
    "altair>=5.3",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # Data & ML
    "pandas>=2.2",
    "polars>=0.20",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "sentence-transformers>=3.0",
    "prophet>=1.1",
    # MLOps
    "mlflow>=2.14",
    "dvc[s3]>=3.51",
    # Scraping
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    # PDF
    "pdfplumber>=0.11",
    # Weather
    "pyowm>=3.3",
    # Orchestration
    "prefect>=3.0",
    # Utilitaires
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "rich>=13.7",
    "typer>=0.12",
    "tenacity>=8.3",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "httpx>=0.27",   # test client FastAPI
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
