[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlife-hub"
version = "0.1.0"
description = "Dashboard personnel — recherche d'emploi & suivi sportif"
authors = [{ name = "Florian Rey", email = "florian.rey38@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    # API & web
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    # Dashboard
    "streamlit>=1.36",
    "plotly>=5.22",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "statsmodels>=0.14",
    # ML & forecasting (Phase 3)
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "prophet>=1.1",
    "sentence-transformers>=3.0",
    # MLOps
    "mlflow>=2.14",
    "dvc[s3]>=3.51",
    # Scraping (sources supplémentaires prévues)
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    # Météo (plan entraînement prévu)
    "pyowm>=3.3",
    # Orchestration
    "prefect>=3.0",
    # Utilitaires
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "rich>=13.7",
    "tenacity>=8.3",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]